src/objects/Suitability_Test__c.object
<CustomObject>
    <description>Suitability test entries for Mifid II compliance</description>
    <fields>
        <fullName>Accepted_Risk_Level__c</fullName>
        <inlineHelpText>What level or risk are you prepared to accept?</inlineHelpText>
        <label>Accepted Risk Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                    <default>true</default>
                    <label>Very Low</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_to_Invest__c</fullName>
        <label>Amount to Invest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Yield</fullName>
                    <default>true</default>
                    <label>Fixed Yield</label>
                </value>
                <value>
                    <fullName>Variable Yield</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Horizon__c</fullName>
        <label>Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Sources__c</fullName>
        <label>Income Sources</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salary</fullName>
                    <default>true</default>
                    <label>Salary</label>
                </value>
                <value>
                    <fullName>Capital Income</fullName>
                </value>
                <value>
                    <fullName>Rental Income</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Suitability Tests</relationshipLabel>
        <relationshipName>Suitability_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investment_Goal__c</fullName>
        <label>Investment Goal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Short Term Cash Flow</fullName>
                </value>
                <value>
                    <fullName>Long Term Savings</fullName>
                </value>
                <value>
                    <fullName>Making High Profit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_Product__c</fullName>
        <label>Investment Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mutual Fund</fullName>
                    <default>true</default>
                    <label>Mutual Fund</label>
                </value>
                <value>
                    <fullName>Property Fund</fullName>
                </value>
                <value>
                    <fullName>Global Equities</fullName>
                </value>
                <value>
                    <fullName>Emerging Markets Fund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_Type__c</fullName>
        <label>Investment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Long-term Investment</fullName>
                    <default>true</default>
                    <label>Long-term Investment</label>
                </value>
                <value>
                    <fullName>Medium-term Investment</fullName>
                </value>
                <value>
                    <fullName>Short-term Investment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Knowledge__c</fullName>
        <inlineHelpText>How well does the customer/prospect understand the product/market? 1 = very little ... 10 = very knowledgeable</inlineHelpText>
        <label>Knowledge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Suitability Tests</relationshipLabel>
        <relationshipName>Suitability_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regular_Disposable_Income__c</fullName>
        <label>Regular Disposable Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Below 5k / month</fullName>
                    <default>true</default>
                    <label>Below 5k / month</label>
                </value>
                <value>
                    <fullName>5k - 10k / month</fullName>
                </value>
                <value>
                    <fullName>Over 10k / month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_Investment__c</fullName>
        <label>Source of Investment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Inheritance</fullName>
                </value>
                <value>
                    <fullName>Property Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Suitability Test</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suitability Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>